--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Home</title>
+    <title>Work</title>
   </head>
   <body>
     <!-- Site Header start -->
@@ -13,13 +13,13 @@
         <nav class="header__nav">
           <ul class="header__list">
             <li class="header__item">
-              <a href="#!" id="active" class="header__link">Home</a>
+              <a href="./index.html" class="header__link">Home</a>
             </li>
             <li class="header__item">
               <a href="./blog.html" class="header__link">Blog</a>
             </li>
             <li class="header__item">
-              <a href="./work.html" class="header__link">Works</a>
+              <a href="#!" id="active" class="header__link">Works</a>
             </li>
             <li class="header__item">
               <a href="./detail.html" class="header__link">Detail</a>
@@ -37,76 +37,10 @@
 
     <!-- Site Main start -->
     <main class="site-main">
-      <section class="intro-section">
-        <div class="container">
-          <div class="intro-row">
-            <div class="intro-content">
-              <h2 class="intro__title">
-                Hi, I am John, <br />
-                Creative Technologist
-              </h2>
-              <p class="intro__text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-                Exercitation veniam consequat sunt nostrud amet.
-              </p>
-              <a class="intro__btn">Download Resume</a>
-            </div>
-            <div class="intro-img">
-              <img
-                src="./images/intro/logo.png"
-                alt="logo.png"
-                width="243"
-                height="243"
-              />
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="posts">
-        <div class="container">
-          <div class="posts-row">
-            <div class="posts__content">
-              <h2 class="posts__title">Recent posts</h2>
-              <p class="posts__text">View all</p>
-            </div>
-            <ul class="posts__list">
-              <li class="posts__item">
-                <h3 class="posts__item__title">
-                  Making a design system from scratch
-                </h3>
-                <h3 class="posts__item__badge">
-                  12 Feb 2020 <span>|</span> Design, Pattern
-                </h3>
-                <p class="posts__item__text">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                  amet sint. Velit officia consequat duis enim velit mollit.
-                  Exercitation veniam consequat sunt nostrud amet.
-                </p>
-              </li>
-              <li class="posts__item">
-                <h3 class="posts__item__title">
-                  Creating pixel perfect icons in Figma
-                </h3>
-                <h3 class="posts__item__badge">
-                  12 Feb 2020 <span>|</span> Figma, Icon Design
-                </h3>
-                <p class="posts__item__text">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                  amet sint. Velit officia consequat duis enim velit mollit.
-                  Exercitation veniam consequat sunt nostrud amet.
-                </p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <section class="works">
+      <section class="work">
         <div class="container">
           <div class="works-row">
-            <h2 class="works__title">Featured works</h2>
+            <h2 class="works__title">Work</h2>
             <ul class="works__list">
               <li class="works__item">
                 <div class="works__item-img">
@@ -169,6 +103,27 @@
                   </p>
                 </div>
               </li>
+              <li class="works__item">
+                <div class="works__item-img">
+                  <img
+                    src="./images/works/img-04.png"
+                    alt="img-04.png"
+                    width="246"
+                    height="184"
+                  />
+                </div>
+                <div class="works__item-content">
+                  <h3 class="item-content__title">Components</h3>
+                  <p class="item-content__badge">
+                    <span>2018</span> Components, Design
+                  </p>
+                  <p class="item-content__text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit
+                    mollit. Exercitation veniam consequat sunt nostrud amet.
+                  </p>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
@@ -188,7 +143,7 @@
                   alt="fb.svg"
                   width="30"
                   height="30"
-                 >
+                />
               </a>
             </li>
 
@@ -199,7 +154,7 @@
                   alt="insta.svg"
                   width="30"
                   height="30"
-                 >
+                />
               </a>
             </li>
 
@@ -210,7 +165,7 @@
                   alt="tw.svg"
                   width="37"
                   height="30"
-                 >
+                />
               </a>
             </li>
 
@@ -221,7 +176,7 @@
                   alt="linkedin.svg"
                   width="30"
                   height="30"
-                 >
+                />
               </a>
             </li>
           </ul>
@@ -230,7 +185,6 @@
       </div>
     </footer>
     <!-- Footer end -->
-
     <script src="./js/app.js"></script>
   </body>
 </html>
