--- a/detail.html
+++ b/detail.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Detail</title>
   </head>
   <body>
@@ -59,7 +59,7 @@
                 alt="img.png"
                 width="680"
                 height="460"
-              />
+               >
             </div>
           </div>
         </div>
@@ -84,14 +84,14 @@
                 class="heading__img"
                 width="680"
                 height="460"
-              />
+               >
               <img
                 src="./images/detail/img-02.png"
                 alt="img-02.png"
                 class="heading__img"
                 width="680"
                 height="460"
-              />
+               >
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
                   alt="fb.svg"
                   width="30"
                   height="30"
-                />
+                 >
               </a>
             </li>
 
@@ -122,7 +122,7 @@
                   alt="insta.svg"
                   width="30"
                   height="30"
-                />
+                 >
               </a>
             </li>
 
@@ -133,7 +133,7 @@
                   alt="tw.svg"
                   width="37"
                   height="30"
-                />
+                 >
               </a>
             </li>
 
@@ -144,7 +144,7 @@
                   alt="linkedin.svg"
                   width="30"
                   height="30"
-                />
+                 >
               </a>
             </li>
           </ul>
@@ -153,6 +153,7 @@
       </div>
     </footer>
     <!-- Footer end -->
+    
     <script src="./js/app.js"></script>
   </body>
 </html>
