--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="intro-row">
             <div class="intro-content">
               <h2 class="intro__title">
-                Hi, I am John, <br />
+                Hi, I am John, <br>
                 Creative Technologist
               </h2>
               <p class="intro__text">
@@ -58,7 +58,7 @@
                 alt="logo.png"
                 width="243"
                 height="243"
-              />
+               >
             </div>
           </div>
         </div>
@@ -115,7 +115,7 @@
                     alt="img-01.png"
                     width="246"
                     height="180"
-                  />
+                   >
                 </div>
                 <div class="works__item-content">
                   <h3 class="item-content__title">Designing Dashboards</h3>
@@ -134,7 +134,7 @@
                     alt="img-02.png"
                     width="246"
                     height="180"
-                  />
+                   >
                 </div>
                 <div class="works__item-content">
                   <h3 class="item-content__title">Vibrant Portraits of 2020</h3>
@@ -155,7 +155,7 @@
                     alt="img-03.png"
                     width="246"
                     height="184"
-                  />
+                   >
                 </div>
                 <div class="works__item-content">
                   <h3 class="item-content__title">36 Days of Malayalam type</h3>
